--- a/PlanCompare_SR_DB.csproj
+++ b/PlanCompare_SR_DB.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{234C1035-2BEB-439C-8AC5-221C9821192F}</ProjectGuid>
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PlanCompare_SR</RootNamespace>
-    <AssemblyName>PlanCompare_SR.esapi</AssemblyName>
+    <RootNamespace>PlanCompare_SR_DB</RootNamespace>
+    <AssemblyName>PlanCompare_SR_DB.esapi</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -34,14 +34,13 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Xaml">
-      <RequiredTargetFramework>4.0</RequiredTargetFramework>
-    </Reference>
+    <Reference Include="UIAutomationProvider" />
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -55,13 +54,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FieldData.cs" />
+    <Compile Include="PlanData.cs" />
     <Compile Include="DataManager.cs" />
-    <Compile Include="PlanCompare_SR.cs" />
+    <Compile Include="PlanCompare_SR_DB.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\mainWindowContents.xaml.cs">
       <DependentUpon>mainWindowContents.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Themes\Generic.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\mainWindowContents.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -69,6 +75,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Runner\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Views\Arrow_Up.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Views\Arrow_Down.PNG" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
