--- a/Runner/PlanCompare_SR_DB.Runner.csproj
+++ b/Runner/PlanCompare_SR_DB.Runner.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{6BEB9305-868A-4666-8165-EDC70DA75337}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>PlanCompare_SR.Runner</RootNamespace>
-    <AssemblyName>PlanCompare_SR.Runner</AssemblyName>
+    <RootNamespace>PlanCompare_SR_DB.Runner</RootNamespace>
+    <AssemblyName>PlanCompare_SR_DB.Runner</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -117,7 +117,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PlanCompare_SR.csproj">
+    <ProjectReference Include="..\PlanCompare_SR_DB.csproj">
       <Project>{234c1035-2beb-439c-8ac5-221c9821192f}</Project>
       <Name>PlanCompare_SR</Name>
     </ProjectReference>
